<resources>
  <string name="app_name">Popstellar</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="add">Add</string>
  <string name="role">Role</string>
  <string name="organizer">Organizer</string>
  <string name="attendee">Attendee</string>
  <string name="witness">Witness</string>
  <string name="member">Member</string>
  <string name="copy_to_clipboard_server">Copy to Clipboard Server Address</string>
  <string name="copy_to_clipboard_lao_id">Copy to Clipboard Lao ID</string>
  <string name="copy_to_clipboard_public_key">Copy to Clipboard Public Key</string>
    <string name="paste_from_clipboard_server">Paste from Clipboard Server Address</string>
    <string name="paste_from_clipboard_lao_id">Paste from Clipboard Lao ID</string>
    <string name="paste_from_clipboard_description">Paste from Clipboard</string>
  <string name="tab_social_media">Social Media</string>
  <string name="tab_digital_cash">Digital Cash</string>
  <string name="tab_popcha">PoPCHA</string>
  <string name="event_list">Events</string>
  <string name="witnessing">Witnessing</string>
  <string name="invite">Invite</string>
  <string name="tokens">Tokens</string>
  <string name="linked_organizations">Linked organizations</string>
  <string name="disconnect">Disconnect</string>
  <string name="home_title">My LAOs</string>
  <string name="join">Join</string>
  <string name="create">Create</string>
  <string name="witness_qr">Become witness</string>
  <string name="my_public_key">My public key:</string>
  <string name="server_url">Server URL</string>
  <string name="no_lao_text">OOPS, Looks like you don\'t have any Local Autonomous Organization (LAO) yet.\n Join or Create one with the buttons below</string>
  <string name="app_info">Welcome to POPstellar, a Proof-Of-Personhood system developed by the DEDIS lab!</string>
  <string name="settings">Settings</string>
  <string name="settings_debugging">Debugging</string>
  <string name="settings_logging_key">enable_logging</string>
  <string name="settings_server_url_key">server_url</string>
  <string name="settings_logging">Logging</string>
  <string name="settings_logging_summary_off">Check the box if you want to send logs to the above server for remote debugging</string>
  <string name="settings_logging_summary_on">Uncheck the box if you want to stop sending logs for remote debugging</string>
  <string name="settings_remote_server">Remote server address</string>
  <string name="settings_remote_server_info">Insert the URL of the remote server to enable logging</string>
  <string name="allow_camera_text">Please allow the camera to be used by the app</string>
  <string name="allow_camera_button">Allow Camera</string>
  <string name="connecting">Connecting to</string>
  <string name="stored_channels">stored channels</string>
  <string name="creating_new_lao">Creating new LAO</string>
  <string name="join_lao_title">Join LAO</string>
  <string name="add_lao_participant_title">Add LAO participant</string>
  <string name="lao_create_title">Create LAO</string>
  <string name="text_entry_create">Organization name</string>
  <string name="lao_create_witnesses_button">Add witnesses</string>
  <string name="lao_create_enable_witnessing_switch">Enable witnessing protocol</string>
  <string name="button_clear">Clear</string>
  <string name="add_election">New Election</string>
  <string name="add_roll_call">New Roll Call</string>
  <string name="add_meeting">New Meeting</string>
  <string name="present_header_title">Current Events</string>
  <string name="future_header_title">Upcoming Events</string>
  <string name="past_header_title">Past Events</string>
  <string name="lao_properties_server_title">Connected to server</string>
  <string name="lao_properties_identifier_title">Identifier</string>
  <string name="identity_name">Name</string>
  <string name="empty_events_organizer_text">No event has been created in this LAO ! \n\nTo create one, tap on add button with a + on the bottom right
  </string>
  <string name="empty_events_non_organizer_text">No event has been created in this LAO ! \n\nSince you are not an organizer, you must wait for them to create one.
  </string>
  <string name="witness_message_popup_text">You have a new witness message to sign!</string>
  <string name="witness_message_popup_action">Go to witnessing</string>
  <string name="open">Open</string>
  <string name="close">Close</string>
  <string name="start_date_required">Start Date*</string>
  <string name="start_time_required">Start Time*</string>
  <string name="end_date_optional">End Date</string>
  <string name="confirm">Confirm</string>
  <string name="cancel">Cancel</string>
  <string name="past_date_not_allowed">Event has to start/end today or in the future</string>
  <string name="end_date_after_start_date_not_allowed">End date has to be after or the same day as the start date
    </string>
  <string name="start_date_after_end_date_not_allowed">Start date must be before or the same day as end date</string>
  <string name="start_time_after_end_time_not_allowed">Start time must be before end time</string>
  <string name="end_time_before_start_time_not_allowed">End time must be after start time</string>
  <string name="end_time_optional">End Time</string>
  <string name="ongoing">Ongoing</string>
  <string name="start_anytime">Starting anytime now</string>
  <string name="start_at">Starting %1$s</string>
  <string name="close_at">Closed %1$s</string>
  <string name="button_cancel">Cancel</string>
  <string name="roll_call_title_required">Roll Call Title*</string>
  <string name="reopen_rollcall">REOPEN</string>
  <string name="meeting_title_required">Meeting Title*</string>
  <string name="meeting_location_not_required">Location</string>
  <string name="qrcode_scanning_add_witness">Scan personal QR code of the witness to add</string>
  <string name="qrcode_scanning_add_popcha">Scan the PoPCHA QR code to log in</string>
  <string name="qrcode_scanning_connect_lao">Scan the invite QR code to join the LAO</string>
  <string name="qrcode_scanning_federation">Scan the other organizer QR code to link the LAOs</string>
  <string name="event_description">Event Description</string>
  <string name="rc_location_title">Location*</string>
  <string name="qrcode_scanning_add_attendee">Scan each participant’s Roll-call QR code</string>
  <string name="scan">Scan</string>
  <string name="add_attendees">Add Attendees</string>
  <string name="enter_manually"> Enter Manually</string>
  <string name="no_camera">No Camera ? -  </string>
  <string name="scanned_tokens">Scanned tokens: </string>
  <string name="scanned_witness">Scanned witnesses: </string>
  <string name="scanned_organizer">Scanned organizer: </string>
  <string name="attendee_already_scanned_warning">Attendee was already scanned</string>
  <string name="witness_already_scanned_warning">"This key already belongs to a witness"</string>
  <string name="attendee_scan_success">Attendee successfully scanned</string>
  <string name="witness_scan_success">Witness successfully scanned</string>
    <string name="qrcode_scanning_manual_entry_error">All fields are required</string>
  <string name="manual_add_close_button_desc">Close button for manual add window</string>
  <string name="manual_add_lao_join_title">Manually Connect to a LAO</string>
  <string name="manual_add_server_url_hint">Server URL</string>
  <string name="manual_add_lao_id_hint">LAO ID</string>
  <string name="manual_add_witness_title">Manually Add Witness</string>
  <string name="manual_add_witness_hint">Witness Public Key</string>
  <string name="manual_add_rc_title">Manually Add Attendee</string>
  <string name="manual_add_rc_add_hint">Attendee Token</string>
  <string name="manual_add_popcha_title">Manually Enter PoPCHA URL</string>
  <string name="manual_add_popcha_hint">PoPCHA URL</string>
  <string name="manual_add_organization_title">Invite an organization</string>
  <string name="manual_add_organization_lao_id_hint">Other LAO\'s ID</string>
  <string name="manual_add_organization_server_url_hint">Other LAO\'s Server URL</string>
  <string name="manual_add_organization_organizer_public_key_hint">Other Organizer\'s Public Key</string>
  <string name="manual_add_organization_challenge_hint">Other Organizer\'s Challenge</string>
  <string name="messages">Messages</string>
  <string name="witnesses">Witnesses</string>
  <string name="witness_added">Witness %1$s successfully added to LAO</string>
  <string name="button_text">Cast Vote</string>
  <string name="submit">Submit</string>
  <string name="add_witness_title">Add Witness</string>
  <string name="sign_message">Sign message</string>
  <string name="confirm_to_sign">Are you sure you want to sign message with ID : %1$s</string>
  <string name="message_description_title">Description</string>
  <string name="signatures_title">Signatures</string>
  <string name="sign">Sign</string>
  <string name="signed">Signed</string>
  <string name="confirm_delete_witnessed_messages">Do you want to delete the messages already passing the witnessing policy?</string>
  <string name="not_a_witness">You\'re not a witness!</string>
  <string name="roll_call_setup_title">Roll Call Setup</string>
  <string name="roll_call_title">Roll Call</string>
  <string name="add_attendee_title">Add Attendee</string>
  <string name="roll_call_attendees">Attendees : %1$d</string>
  <string name="roll_call_scanned">Scanned tokens : %1$d</string>
  <string name="roll_call_description_title">Description</string>
  <string name="roll_call_location_title">Location</string>
  <string name="username_default">Username</string>
<string name="roll_call_attendees_list_not_sorted">Attendees list is not sorted, risk of de-anonymization"</string>
  <string name="meeting_title">Meeting</string>
  <string name="meeting_setup_title">Meeting Setup</string>
  <string name="election_title">Election</string>
  <string name="election_result_title">Election Result</string>
  <string name="election_setup_title">Election Setup</string>
  <string name="closed">Closed</string>
  <string name="created_displayed_text">Not yet opened</string>
  <string name="finished">Finished</string>
  <string name="add_ballot_options_button_text">Add ballot options</string>
  <string name="add_question_button_text">Add question</string>
  <string name="election_setup_name_hint">Election name</string>
  <string name="valid_token_title">Valid Token</string>
  <string name="previous_token_title">Previous Tokens</string>
  <string name="empty_tokens_text">Hey there ! Seems you have no tokens.\n\nThey are important,
    they grant you participation to all features in your local autonomous organization (LAO) such as
    elections, digital cash and social media.\nTo get a token, you must attend a roll call and wait
    until your LAO\'s organizer closes it.\n\nIf you are an organizer you may schedule a roll call !
  </string>
  <string name="digital_cash_send">Send</string>
  <string name="digital_cash_issue">Issue</string>
  <string name="digital_cash_history">Transaction History</string>
  <string name="digital_cash_receive">Receive</string>
  <string name="digital_cash_home">Digital Cash</string>
  <string name="digital_cash_receipt">Receipt</string>
  <string name="digital_cash_amount_empty">Amount: 0.00</string>
  <string name="digital_cash_beneficiary_address">Beneficiary: %1$s</string>
  <string name="digital_cash_content_description_qr_receipt">Receipt qr code transaction</string>
  <string name="profile">Profile</string>
  <string name="send">Send</string>
  <string name="username">username</string>
  <string name="time_ago">time ago</string>
  <string name="text">text</string>
  <string name="delete_button">delete button</string>
  <string name="send_button_content_desc">Send button</string>
  <string name="receive_button_content_desc">Receive button</string>
  <string name="lao_coins">LAO coins</string>
</resources>