<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/lao_detail_event_list_menu"
    android:icon="@drawable/ic_lao_detail_event_list_foreground"
    android:title="@string/event_list" />
  <item
    android:id="@+id/lao_detail_identity_menu"
    android:icon="@drawable/ic_common_profile_foreground"
    android:title="@string/tab_identity" />
  <item
    android:id="@+id/lao_detail_witnessing_menu"
    android:icon="@drawable/ic_lao_detail_witness_foreground"
    android:title="@string/witnessing" />
  <item
    android:id="@+id/lao_detail_digital_cash_menu"
    android:icon="@drawable/ic_lao_detail_digital_cash_foreground"
    android:title="@string/tab_digital_cash" />
  <item
    android:id="@+id/lao_detail_social_media_menu"
    android:icon="@drawable/ic_common_social_media_enabled"
    android:title="@string/tab_social_media" />

</menu>
