<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_lao_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginHorizontal="@dimen/margin_text"
      android:gravity="center_vertical"
      android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lao_name_entry"
        app:endIconMode="clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_entry_create"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/lao_name_entry_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_url_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_url"
        android:layout_marginTop="@dimen/margin_text"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/server_url_entry_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />

      </com.google.android.material.textfield.TextInputLayout>

      <TextView
        android:id="@+id/witnesses_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/explication_text_style"
        android:text="@string/witnesses"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_text"
        app:layout_constraintTop_toBottomOf="@id/server_url_entry_edit_text" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/witnesses_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_text"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/witnesses_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

      <Button
        android:id="@+id/add_witness_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lao_create_witnesses_button"
        android:layout_gravity="center_horizontal" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_button"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
          android:id="@+id/button_cancel_launch"
          android:layout_width="@dimen/standard_button_width"
          android:layout_height="@dimen/standard_button_height"
          android:gravity="center"
          android:backgroundTint="@color/gray"
          android:text="@string/button_cancel" />

        <Button
          android:id="@+id/button_create"
          android:layout_width="@dimen/standard_button_width"
          android:layout_height="@dimen/standard_button_height"
          android:layout_marginEnd="@dimen/margin_button"
          android:layout_marginStart="@dimen/margin_button"
          android:gravity="center"
          android:enabled="false"
          android:text="@string/create" />

      </LinearLayout>
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
