<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_qr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/pk_qr_code"
      android:layout_width="@dimen/qr_rollcall_img"
      android:layout_height="@dimen/qr_rollcall_img"
      android:contentDescription="@string/witness"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/pk_title"
      style="@style/explication_text_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/home_button_vertical_margin"
      android:text="@string/my_public_key"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/pk_qr_code" />

    <ImageButton
      android:id="@+id/copy_server_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:layout_marginStart="@dimen/margin_button"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/copy_to_clipboard_public_key"
      app:layout_constraintStart_toEndOf="@id/pk_title"
      app:layout_constraintTop_toTopOf="@+id/pk_title"
      app:srcCompat="@drawable/ic_content_copy" />

    <TextView
      android:id="@+id/pk_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/home_button_vertical_margin"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/pk_title" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
